# libnw

./: AUTHORS  COPYING  ChangeLog  Doxyfile.in  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.License-Torlack  README.in  README.tech  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  magic
include/: 2da.h  Makefile.am  Makefile.in  agg.h  are.h  bendian.h  bic.h  bif.h  bin.h  dlg.h  erf.h  exmem.h  fac.h  gamedir.h  gff.h  gic.h  git.h  global.h  gui.h  hak.h  ifo.h  itp.h  jrl.h  key.h  libnw_version.h  mdl.h  mod.h  nwnfopen.h  object.h  ptt.h  restyp.h  rgb.h  set.h  str.h  tlk.h  utc.h  utd.h  ute.h  uti.h  utm.h  (+7 more)
itpdis/: Makefile.am  Makefile.in  itpdis.1  itpdis.1.in  main.c
libnw/: Makefile.am  Makefile.in  agg_create.3  agg_create.3.in  agg_create.c  agg_load.c  agg_toc.c  agg_toc_del.3  agg_toc_del.3.in  agg_toc_load.3  agg_toc_load.3.in  bendian.c  bif_toc.c  bif_toc_load.3  bif_toc_load.3.in  dump.c  exmem.c  gamedir.c  get_game_dir.3  get_game_dir.3.in  global.c  key.c  make_2da.c  mdll.c  mdll.l  mdly.c  mdly.h  mdly.y  nwnfopen.c  plist.c  plist2are.c  plist2dlg.c  plist2gic.c  plist2ifo.c  plist2utc.c  plist2utd.c  plist2ute.c  plist2utp.c  plist2utt.c  read_key.3  (+11 more)
nw2da2csv/: Makefile.am  Makefile.in  main.c
nwaggext/: Makefile.am  Makefile.in  agg1ext.c  nwaggext.1  nwaggext.1.in  nwaggext.c
nwareamap/: Makefile.am  Makefile.in  main.c  nwareamap.1  nwareamap.1.in
nwmrgplc/: Makefile.am  Makefile.in  main.c
nwresext/: Makefile.am  Makefile.in  nwresext.1  nwresext.1.in  nwresext.c
nwstrref/: Makefile.am  Makefile.in  main.c  nwstrref.1  nwstrref.1.in
nwtsfix/: Makefile.am  Makefile.in  main.c  nwtsfix.1  nwtsfix.1.in
nwtsmerge/: Makefile.am  Makefile.in  main.c  nwtsmerge.1  nwtsmerge.1.in
nwtsrefs/: Makefile.am  Makefile.in  main.c  nwtsrefs.1  nwtsrefs.1.in  xref.c
plistcheck/: Makefile.am  Makefile.in  main.c
xml/: Makefile.am  Makefile.in  git.xsl  itp.dtd  utc.xsl
